--- a/index.gohtml
+++ b/index.gohtml
@@ -3,27 +3,38 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Input Type Submit</title>
 </head>
 
 <body>
 
-  {{if .}}
-  <main>
-    <p><strong>variable name (identifires) and <em>values</em></strong>:</p>
-    {{range $key, $value := .}}
-    <p><strong>{{$key}}</strong></p>
-    <ul>{{range $value}} <li><em>{{.}}</em></li>{{end}}</ul>
-    {{end}}
-  </main>
-  {{end}}
+  <header>
+    {{if .Method}}<p>The request method: {{.Method}}</p>{{end}}
 
-  <form action="/" method="GET">
-  <!-- <form action="/" method="POST"></form> -->
-    <input type="text" name="fname" placeholder="firstname" autocomplete="off">
-    <input type="submit" name="submit-btn" value="anda button">
+    {{if .URL}}<p>The request URL:</p>
+    <ul>
+      <li>Scheme: {{.URL.Scheme}}</li>
+      <li>Opaque: {{.URL.Opaque}}</li>
+      <li>Host: {{.URL.Host}}</li>
+      <li>Path: {{.URL.Path}}</li>
+      <li>RawPath: {{.URL.RawPath}}</li>
+      <li>ForceQuery: {{.URL.ForceQuery}}</li>
+      <li>RawQuery: {{.URL.RawQuery}}</li>
+      <li>Fragment: {{.URL.Fragment}}</li>
+    </ul>
+    {{end}}
+
+    {{if .Submissions}}<p><strong>variable names</strong> (identifiers) and <em>values</em>:</p>
+    {{range $key, $value := .Submissions}}
+    <p><strong>{{$key}}</strong></p>
+    <ul>{{range $value}}<li><em>{{.}}</em></li>{{end}}</ul>
+    {{end}}
+    {{end}}
+  </header>
+
+  <form action="/" method="POST">
+    <input type="text" name="fname" placeholder="first name" autofocus autocomplete="off">
+    <input type="submit" name="submit-btn" value="onda button">
   </form>
 
 </body>
