--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 
 {{template "header"}}
 
+<!-- When posting a form, you need to use multipart/form-data -->
+
 <form method="POST" enctype="multipart/form-data">
     <label for="idx-f">Choose File To Upload</label>
     <input type="file" id="idx-f" name="q">
