os.Create, uploading files update

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 
 {{template "header"}}
 
-<!-- When posting a form, you need to use multipart/form-data -->
+<!-- When posting a file in a form, you need to use multipart/form-data -->
 
 <form method="POST" enctype="multipart/form-data">
     <label for="idx-f">Choose File To Upload</label>
