encrypt password with bcrypt

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -8,6 +9,7 @@
 
 {{if .First}}
 USER NAME {{.UserName}}<br>
+PASSWORD {{.Password}}<br>
 FIRST {{.First}}<br>
 LAST {{.Last}}<br>
 {{else}}
