--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -14,6 +15,7 @@ FIRST {{.First}}<br>
 LAST {{.Last}}<br>
 {{else}}
 <h2><a href="/signup">sign up</a></h2>
+<h2><a href="/login">log in</a></h2>
 {{end}}
 
 <br>
