--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -12,6 +13,12 @@
     <input type="text" name="password" placeholder="password"><br>
     <input type="text" name="firstname" placeholder="first name"><br>
     <input type="text" name="lastname" placeholder="last name"><br>
+    <label for="sr">Role</label>
+    <select name="role" id="sr">
+        <option value="user">user</option>
+        <option value="admin">admin</option>
+        <option value="007">007</option>
+    </select>
     <input type="submit">
 
 </form>
