--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -7,7 +6,15 @@
 </head>
 <body>
 
-<h1>Cookie value: {{.}}</h1>
+<h1>Cookie Values:</h1>
+{{range .}}
+<h2>{{.}}</h2>
+{{end}}
+
+<form method="post" enctype="multipart/form-data">
+    <input type="file" name="myFile">
+    <input type="submit">
+</form>
 
 </body>
 </html>
